--- a/README.adoc
+++ b/README.adoc
@@ -134,7 +134,7 @@ https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Request A
 I am providing this reference as a demonstration of
 
 * the ability to find and exploit the most efficient services (Google Charts in this case)
-* skills in implementing REST API (the Front End has a number of switches which control how the analysis is performed)
+* skills in implementing REST API
 
 
 {empty} +
