Move Albatross to before the original Albatross Travel project

--- a/README.adoc
+++ b/README.adoc
@@ -28,41 +28,11 @@ emphasize a number of important characteristics:
 
 == &#x1f30e; Albatross Online Store — Feature Project
 
-image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
-
-The code is hosted at https://gitlab.com/pasha-bolokhov/albatross-travel[Albatross Project] webpage.
-The running LEMP version is available on this
-https://albatross-travel-app.herokuapp.com[Heroku] instance.
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-packages.png[link=https://albatross-travel-agency.web.app]
 
 [NOTE]
-This is originally a _class_ project featuring multiple frameworks and services — AngularJS, Bootstrap, JWT, MySQL, PayPal (sandbox) _etc_
-
-This project demonstrates the skills of both Front End and Back End programming,
-ability to efficiently plan the project and collaborate and lead the programming team.
-This was a course project at the Camosun College's Computer Systems Technology program.
-At the time of creation, it used the most popular frameworks (AngularJS, Bootstrap) for the Front End.
-The code available to browse, emphasizes the ability to learn new features, significantly exceeding the College's program.
-At the time of writing the code, the courses had covered basic HTML/CSS, basic Javascript, and basic PHP, and MySQL.
-Single Page Apps, REST API and responsive design were not even close to be taught.
-Neither were Git, GitHub and the related aspects of code versioning.
-My rôle was — to discover and educate myself on the leading-edge frameworks, to set up a virtual machine for hosting the app, and to educate and lead the team of developers
-
-The most significant feature of this app (at the time of developing) was AngularJS.
-While outdated these days, it was a leading edge and perhaps the most powerful approach to Single Page Apps.
-Using AngularJS involved a number of features by itself. A few examples of them are Promises (not yet part of Javascript), UI Router, state management, form validation (front-end), JWT, and many others
-
-The back-end part of this project was at the same time a simple REST API implementation written in PHP with MySQL as the database.
-The scheme of the database had to be thoroughly prepared, as such was the requirement of the course.
-The database represents the normalized structure of client's data (personal data, purchases) as well as that of the list of products (components, relations between the components _etc_)
-
-Feel free to browse this project, use a mock email address to sign up and log in. Please note that mobile UX was not a requirement for this project at the time (2015)
-
-''''
-
-image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-angular.png[link=https://albatross-travel-agency.web.app]
-
-[NOTE]
-A newer version of this Web App is under development.
+This is an Angular version of the project shown further below which was originally written in AngularJS.
+This project is still under development.
 The features that it employs are significantly newer and are at the leading edge of web technology.
 While the project is available to browse, please note that it is in a very raw state,
 with significant improvements pending to its UI, themes, loading experiences and so on
@@ -95,9 +65,13 @@ Instead, it involves
 * Firebase Auth for user authentication (including provider-based authentication with Google, Facebook, Microsoft _etc_).
   Authentication and the related security issues are no longer a problem for the app
 * Firebase Hosting for serving the app. Deployment is done via CI/CD pipelines
+* Firebase Storage for storing large static resources such as images
 * Firestore as an ultra-modern, real-time and extremely scalable NoSQL database.
   While in general NoSQL has been the trend of the last few years, it typically suffers the "denormalization" problem, needed to address in order to provide high-availability data services efficiently.
-  However, with Firestore _shallow queries_, denormalization is not necessary
+  However, with Firestore _shallow queries_, denormalization is not always necessary
+
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-firestore.png[]
+
 * Firestore has rôle-based *access rules*, which provides a simple and yet rock-solid approach
 to authorization. Rules are effectively separated from the logic of the rest of the "back-end",
 minimizing chances of an error
@@ -105,9 +79,43 @@ minimizing chances of an error
 Cloud functions are NodeJS-based services, which are triggered by specific conditions or events.
 They run to keep the database properly organized, and also serve as API access points
 
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-functions.png[]
+
 Feel free to log onto the hosted version of the new app (links are available above), scout, create an account (or log in with a provider-based account) and assess its features. Many of the features are not visible "by touch", and can only be seen in the code.
 Again, please note that the app is still under development.
 In particular, colour themes and palettes and some layouts are temporary
+
+''''
+
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
+
+This is the original version of the Albatross Project written in 2015.
+The code is hosted at https://gitlab.com/pasha-bolokhov/albatross-travel[Albatross Project] webpage.
+The running LEMP version is available on this
+https://albatross-travel-app.herokuapp.com[Heroku] instance.
+
+[NOTE]
+This is originally a _class_ project featuring multiple frameworks and services — AngularJS, Bootstrap, JWT, MySQL, PayPal (sandbox) _etc_
+
+This project demonstrates the skills of both Front End and Back End programming,
+ability to efficiently plan the project and collaborate and lead the programming team.
+This was a course project at the Camosun College's Computer Systems Technology program.
+At the time of creation, it used the most popular frameworks (AngularJS, Bootstrap) for the Front End.
+The code available to browse, emphasizes the ability to learn new features, significantly exceeding the College's program.
+At the time of writing the code, the courses had covered basic HTML/CSS, basic Javascript, and basic PHP, and MySQL.
+Single Page Apps, REST API and responsive design were not even close to be taught.
+Neither were Git, GitHub and the related aspects of code versioning.
+My rôle was — to discover and educate myself on the leading-edge frameworks, to set up a virtual machine for hosting the app, and to educate and lead the team of developers
+
+The most significant feature of this app (at the time of developing) was AngularJS.
+While outdated these days, it was a leading edge and perhaps the most powerful approach to Single Page Apps.
+Using AngularJS involved a number of features by itself. A few examples of them are Promises (not yet part of Javascript), UI Router, state management, form validation (front-end), JWT, and many others
+
+The back-end part of this project was at the same time a simple REST API implementation written in PHP with MySQL as the database.
+The scheme of the database had to be thoroughly prepared, as such was the requirement of the course.
+The database represents the normalized structure of client's data (personal data, purchases) as well as that of the list of products (components, relations between the components _etc_)
+
+Feel free to browse this project, use a mock email address to sign up and log in. Please note that mobile UX was not a requirement for this project at the time (2015)
 
 
 {empty} +
